[CAMBIOS] juro que ahora si dejo la compu

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </div>
     <section>
         <article>
-            <img src=""
+            <a href= "carrotCake.html"> <img src="IMG/carrotcake.jpg"></a>
+            <h2>Carrot Cake de Agus.</h2>
+            <p>Una receta para demoler el hambre.</p>
 
         </article>
     </section>
