agregue y modifique codigo

--- a/index.html
+++ b/index.html
@@ -3,31 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=<device-width>,  initial-scale=1.0">
+    <link rel="stylesheet" href="">
+    <title>Recetas para matar el hambre</title>
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="img/logo-front.png"></a>
-            <a href=""><img src="img/colombia.png" width="200"></a>
-            <a href=""><img src="img/argentina.png" width="200"></a>
+            <img src="img/logo-front.png" alt="logo de la página" height="25 px">
+            <br>
+            <a href="./recetasColombianas.html" target="blank"><img src="img/colombia.png" width="200"></a>
+            <a href="./recetasArgentinas.html" target="blank"><img src="img/argentina.png" width="200"></a>
         </nav> 
     </header>      
     <div>
-        <img src="img/banner.jpg" width="1250">
+        <img src="img/banner.jpg" alt="banner con Uma Thruman y mensaje de 'Kill the hambre'" width="1250">
     </div>
     <section>
         <article>
-            <a href= "carrotCake.html"> <img src="IMG/carrotcake.jpg" width= "500"></a>
-            <h2>Carrot Cake de Agus.</h2>
+            <a href= "./carrotCake.html" target="blank"> <img src="IMG/carrotcake.jpg" alt="Carrot cake" width= "500"></a>
+            <h2>Carrot Cake de Agus</h2>
             <p>Una receta para demoler el hambre.</p>
 
         </article>
-        <a href= "lemonPie.html"> <img src="IMG/lemonPie.jpg" width= "500"></a>
-            <h2>Lemon Pie.</h2>
+        <a href= "./lemonPie.html" target="blank"> <img src="IMG/lemonPie.jpg" alt="Lemmon pie" width= "500"></a>
+            <h2>Lemmon Pie</h2>
             <p> Aniquila antojos por cosas dulces.</p>
     </section>
-
 </body>
 </html>
