[ADD] Cambios finales

--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,7 @@
             <nav>
                 <a href="index.html"><img src="img/loguito.png" width="300"></a>
                 <img src="img/espacio.png"> <!-- Estamos desesperadas por avanzar a CSS -->
-                <button><a href="about.html"><img src="img/acerca.png" width="200"></a></button>
+                <button><a href="index.html"><img src="img/home.png" width="200"></a></button>
                 <button><a href="recetasColombianas.html"><img src="img/colombia.png" width="200"></a></button>
                 <button><a href="recetasArgentinas.html"><img src="img/argentina.png" width="200"></a></button>
                 <button><a href="contacto.html"><img src="img/contacto.png" width="200"></a></button>
@@ -21,11 +21,21 @@
                 <hr>  
             </nav> 
     </header>
-    
+    <div>
+    <h1>Contacto</h1>
+    <img src="img/lu.png" alt="Fotografia de Luciana Murga" width="100">
+    <h2>Luciana Murga</h2> 
+    <a href="lulipsicounc@gmail.com">Email</a>
+    <br>
+    <hr>
+    <img src="img/agus.png" alt="Fotografia de Agustina Pasqualis" width="100">
+    <h2>Agustina Pasqualis</h2>
+    <a href="agustinapasqualis@gmail.com">Email</a>
+    </div>
 </body>
     <br>
     <br>
-    <hr>
+    <hr>    
 <footer>
     <p> Kill the Hambre 2021, Todos los derechos reservados</p>
 </footer>
