--- a/lemonPie.html
+++ b/lemonPie.html
@@ -12,7 +12,7 @@
             <nav>
                 <a href="index.html"><img src="img/loguito.png" width="300"></a>
                 <img src="img/espacio.png"> <!-- Estamos desesperadas por avanzar a CSS -->
-                <button><a href="about.html"><img src="img/acerca.png" width="200"></a></button>
+                <button><a href="index.html"><img src="img/home.png" width="200"></a></button>
                 <button><a href="recetasColombianas.html"><img src="img/colombia.png" width="200"></a></button>
                 <button><a href="recetasArgentinas.html"><img src="img/argentina.png" width="200"></a></button>
                 <button><a href="contacto.html"><img src="img/contacto.png" width="200"></a></button>
