--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="index.html"><img src="img/loguito.png" alt="logo kill the hambre" width="300"></a>
             <img src="img/espacio.png"> <!-- Estamos desesperadas por avanzar a CSS -->
             <button><a href="index.html"><img src="img/home.png" alt="link pestaña sobre nosotros" width="200"></a></button>
-            <button><a href="recetasColombianas.html"><img src="img/colombia.png" alt="link recetas colombinas" width="200"></a></button>
+            <button><a href="recetasColombianas.html"><img src="IMG/colombia.png" alt="link recetas colombinas" width="200"></a></button>
             <button><a href="recetasArgentinas.html"><img src="img/argentina.png" alt="link recetas argentinas" width="200"></a></button>
             <button><a href="contacto.html"><img src="img/contacto.png" alt="link pestaña contacto" width="200"></a></button>
             <br>
