--- a/carrotCake.html
+++ b/carrotCake.html
@@ -21,7 +21,7 @@
                 </nav> 
         </header>
         <section>
-            <img src="./IMG/carrotcake.jpg" alt="carrot cake" height="200 px">
+            <img src="img/carrotcake.jpg" alt="carrot cake" height="200 px">
             <h1>El Carrot Cake de Agus</h1>
             <p>La hago en budinera y es lo más de lo más. La comen chicos que odian la zanahoria y grandes que no entienden que hace un vegetal ahí, como si fuese el manjar más manjar en la faz de la tierra. </p>
         </section>
