--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     </div>
     <section>
         <article>
-            <a href= "./carrotCake.html" target="blank"> <img src="IMG/carrotcake.jpg" alt="Carrot cake" width= "500"></a>
+            <a href= "/carrotCake.html" target="blank"> <img src="img/carrotcake.jpg" alt="Carrot cake" width= "500"></a>
             <h2>Carrot Cake de Agus</h2>
             <p>Una receta para demoler el hambre.</p>
 
         </article>
-        <a href= "./lemonPie.html" target="blank"> <img src="IMG/lemonPie.jpg" alt="Lemmon pie" width= "500"></a>
+        <a href= "./lemonPie.html" target="blank"> <img src="img/lemonPie.jpg" alt="Lemmon pie" width= "500"></a>
             <h2>Lemmon Pie</h2>
             <p> Aniquila antojos por cosas dulces.</p>
     </section>
