--- a/lemonPie.html
+++ b/lemonPie.html
@@ -22,7 +22,7 @@
             </nav> 
     </header>
     <section>
-        <img src="./IMG/lemonPie.jpg" alt="Lemmon pie" height="200 px">
+        <img src="img/lemonPie.jpg" alt="Lemmon pie" height="200 px">
         <h1>El clásico Lemmon Pie</h1>
         <p>Es el preferido de los que les gusta lo dulce pero no lo empalagoso. El lemon pie es una tarta, es decir, una base de masa y un relleno. Como su nombre lo indica, está hecha con jugo de limón, azúcar y huevos. Todo eso mezclado hace el famoso custard, el relleno cremoso amarillo que es tan típico del lemon pie.</p>
     </section>
