--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <section>
         <article>
-            <a href= "/carrotCake.html" target="blank"> <img src="img/carrotcake.jpg" alt="Carrot cake" width= "500"></a>
+            <a href= "./carrotCake.html" target="blank"> <img src="img/carrotcake.jpg" alt="Carrot cake" width= "500"></a>
             <h2>Carrot Cake de Agus</h2>
             <p>Una receta para demoler el hambre.</p>
 
