--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
     </header>      
     <div>
         <br>
-        <img src="img/banner.jpg" alt="banner con Uma Thruman y mensaje de 'Kill the hambre'" width="450">
+        <img src="img/banner.jpg" alt="banner con Uma Thruman y mensaje de 'Kill the hambre'" height="200">
         <br>
     </div>
     <section>
         <article>
-            <a href= "./carrotCake.html" target="blank"> <img src="img/carrotcake.jpg" alt="Carrot cake" width= "450"></a>
+            <a href= "./carrotCake.html" target="blank"> <img src="img/carrotcake.jpg" alt="Carrot cake" height="200"></a>
             <h2>Carrot Cake de Agus</h2>
             <p>Una receta para demoler el hambre.</p>
 
         </article>
-        <a href= "./lemonPie.html" target="blank"> <img src="img/lemonPie.jpg" alt="Lemmon pie" width= "450"></a>
+        <a href= "./lemonPie.html" target="blank"> <img src="img/lemonPie.jpg" alt="Lemmon pie" height="200"></a>
             <h2>Lemmon Pie</h2>
             <p> Aniquila antojos por cosas dulces.</p>
     </section>
