hice correcciones en el código

--- a/muffins.html
+++ b/muffins.html
@@ -23,8 +23,8 @@
         </header>
         <section>
             <img src="" alt="muffins de manzana y avena" height="200 px">
-            <h1>Muffins de avena y manzana sin azúcar añadido by Lu</h1>
-            <p>Un desayuno perfecto! Éstos muffins de avena y manzana son ideales para desayunar o merendar de lo más saludable y delicioso.</p>
+            <h1>Muffins de avena y manzana by Lu</h1>
+            <p>Un desayuno perfecto! Éstos muffins de avena y manzana sin azúcar añadido son ideales para desayunar o merendar muy saludable y delicioso.</p>
         </section>
         <section>
             <h2>Ingredientes</h2>
@@ -43,10 +43,9 @@
                             <li>Nueces</li>
                             <li>Semillas (yo uso de girasol)</li>    
                         </ul>
-                 </ul>
-                 <hr>
+                 
                  <p>* Para hacer harina de avena simplemente debemos procesar copos de avena (tradicional o instántanea).</p>
-                 <hr>
+                 <br>
         </section>
         <section>
             <h2>Instrucciones</h2>
