--- a/index.html
+++ b/index.html
@@ -31,11 +31,17 @@
             <a href= "./carrotCake.html" target="blank"> <img src="img/carrotcake.jpg" alt="Carrot cake" height="200"></a>
             <h2>Carrot Cake de Agus</h2>
             <p>Una receta para demoler el hambre.</p>
-
         </article>
-        <a href= "./lemonPie.html" target="blank"> <img src="img/lemonPie.jpg" alt="Lemmon pie" height="200"></a>
+        <article>
+            <a href= "./lemonPie.html" target="blank"> <img src="img/lemonPie.jpg" alt="Lemmon pie" height="200"></a>
             <h2>Lemmon Pie</h2>
             <p> Aniquila antojos por cosas dulces.</p>
+        </article>
+        <article>
+            <a href= "./muffins.html" target="blank"> <img src="" alt="Muffins de avena y manzana" height="200"></a>
+            <h2>Muffins de avena y manzana by Lu</h2>
+            <p>Desayuno saludable y sin azúcar agregado.</p>
+        </article>
     </section>
 </body>
     <br>
