[ADD] imagen muffins

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p> Aniquila antojos por cosas dulces.</p>
         </article>
         <article>
-            <a href= "./muffins.html" target="blank"> <img src="" alt="Muffins de avena y manzana" height="200"></a>
+            <a href= "./muffins.html" target="blank"> <img src="img/muffinManz.jpg" alt="Muffins de avena y manzana" height="200"></a>
             <h2>Muffins de avena y manzana by Lu</h2>
             <p>Desayuno saludable y sin azúcar agregado.</p>
         </article>
