agregué mailto a contactos

--- a/contacto.html
+++ b/contacto.html
@@ -25,12 +25,12 @@
     <h1>Contacto</h1>
     <img src="img/lu.png" alt="Fotografia de Luciana Murga" width="100">
     <h2>Luciana Murga</h2> 
-    <a href="lulipsicounc@gmail.com">Email</a>
+    <a href="mailto:lulipsicounc@gmail.com">Email</a>
     <br>
     <hr>
     <img src="img/agus.png" alt="Fotografia de Agustina Pasqualis" width="100">
     <h2>Agustina Pasqualis</h2>
-    <a href="agustinapasqualis@gmail.com">Email</a>
+    <a href="mailto:agustinapasqualis@gmail.com">Email</a>
     </div>
 </body>
     <br>
