--- a/lemonPie.html
+++ b/lemonPie.html
@@ -27,9 +27,9 @@
         <p>Es el preferido de los que les gusta lo dulce pero no lo empalagoso. El lemon pie es una tarta, es decir, una base de masa y un relleno. Como su nombre lo indica, está hecha con jugo de limón, azúcar y huevos. Todo eso mezclado hace el famoso custard, el relleno cremoso amarillo que es tan típico del lemon pie.</p>
     </section>
     <section>
-        <h2>Ingredientes</h2>
+        <h2 class="subti1">Ingredientes</h2>
         <article>
-            <h3>Para la masa</h3>
+            <h3 class="subti2">Para la masa</h3>
             <ul type="disc">
                 <li>200g. gramos de harina 0000,</li>
                 <li>50g. de azúcar,</li>
@@ -38,7 +38,7 @@
             </ul>
         </article>
         <article>
-            <h3>Para la crema</h3>
+            <h3 class="subti2">Para la crema</h3>
             <ul type="disc">
                 <li>150cc. de jugo de limón,</li>
                 <li>1 cucharada de ralladura de limón,</li>
@@ -47,7 +47,7 @@
             </ul>
         </article>
         <article>
-            <h3>Para el merengue</h3>
+            <h3 class="subti2">Para el merengue</h3>
             <ul type="disc"> 
                 <li>240g. de azúcar,</li>
                 <li>3 claras.</li>
@@ -55,7 +55,7 @@
         </article>
     </section>
     <section>
-        <h2>Instrucciones</h2>
+        <h2 class="subti1">Instrucciones</h2>
         <ol type="1">
             <li>Procesar o mezclar ligeramente la harina, el azúcar y la manteca fría curtada en cubitos, hasta formar un arenado. Agregar el huevo y unir la masa sin trabajarla mucho. Envolver en film y llevar a la heladera por 30 minutos aproximadamente.</li>
             <li>Precalentar el horno a temperatura media (180°C).</li>
