--- a/muffins.html
+++ b/muffins.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="../KillTheHambre/CSS/styleMuffins.css">
         <title>Muffins de manzana y avena de Lu</title>
     </head>
     <body>
@@ -27,7 +27,7 @@
             <p>Un desayuno perfecto! Éstos muffins de avena y manzana sin azúcar añadido son ideales para desayunar o merendar muy saludable y delicioso.</p>
         </section>
         <section>
-            <h2>Ingredientes</h2>
+            <h2 class="subti1">Ingredientes</h2>
                 <ul type="disc">
                     <li>200 gr de harina de avena *</li>
                     <li>1 cucharada de aceite de coco (puede reemplazarse por oliva)</li>
@@ -48,7 +48,7 @@
                  <br>
         </section>
         <section>
-            <h2>Instrucciones</h2>
+            <h2 class="subti1">Instrucciones</h2>
             <ol type="1">
                 <li>Pelamos las manzanas y podemos cortarlas en cubitos o rallarlas (a mi me gusta más la última opción).</li>
                 <li>En un bowl mezclamos primero el polvo para hornear con la harina de avena, y luego incorporamos el resto de los ingredientes.</li>
