[ADD] agregando estilo

--- a/lemonPie.html
+++ b/lemonPie.html
@@ -11,11 +11,12 @@
     <header>
             <nav>
                 <<a href="index.html"><img src="img/loguito.png" alt="logo kill the hambre" width="300"></a>
-                <br>
-                <button><a href="index.html"><img src="img/home.png" width="200"></a></button>
-                <button><a href="recetasColombianas.html"><img src="img/colombia.png" width="200"></a></button>
-                <button><a href="recetasArgentinas.html"><img src="img/argentina.png" width="200"></a></button>
-                <button><a href="contacto.html"><img src="img/contacto.png" width="200"></a></button>
+                <div  class="naveg">
+                    <button><a href="index.html"><img src="img/home.png" width="200"></a></button>
+                    <button><a href="recetasColombianas.html"><img src="img/colombia.png" width="200"></a></button>
+                    <button><a href="recetasArgentinas.html"><img src="img/argentina.png" width="200"></a></button>
+                    <button><a href="contacto.html"><img src="img/contacto.png" width="200"></a></button>
+                </div>>
                 <br>
                 <br>
                 <hr>  
