--- a/muffins.html
+++ b/muffins.html
@@ -11,11 +11,13 @@
         <header>
                 <nav>
                     <a href="index.html"><img src="img/loguito.png" width="300"></a>
-                    <img src="img/espacio.png"> <!-- Estamos desesperadas por avanzar a CSS // jajajajaa-->
-                    <button><a href="index.html"><img src="img/home.png" width="200"></a></button>
-                    <button><a href="recetasColombianas.html"><img src="img/colombia.png" width="200"></a></button>
-                    <button><a href="recetasArgentinas.html"><img src="img/argentina.png" width="200"></a></button>
-                    <button><a href="contacto.html"><img src="img/contacto.png" width="200"></a></button>
+                    <img src="img/espacio.png">
+                    <div  class="naveg">
+                        <button><a href="index.html"><img src="img/home.png" width="200"></a></button>
+                        <button><a href="recetasColombianas.html"><img src="img/colombia.png" width="200"></a></button>
+                        <button><a href="recetasArgentinas.html"><img src="img/argentina.png" width="200"></a></button>
+                        <button><a href="contacto.html"><img src="img/contacto.png" width="200"></a></button>
+                    </div>
                     <br>
                     <br>
                     <hr>  
