[ADD] css Carrot Cake

--- a/carrotCake.html
+++ b/carrotCake.html
@@ -4,30 +4,27 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="../KillTheHambre/assets/styles.css">
         <title>Carrot Cake de Agus</title>
     </head>
     <body>
         <header>
-                <nav>
-                    <a href="index.html"><img src="img/loguito.png" alt="logo kill the hambre" width="300"></a>
-                    <br>
+            <nav>
+                <<a href="index.html"><img src="img/loguito.png" alt="logo kill the hambre" width="300"></a>
+                <div  class="naveg">
                     <a href="index.html"><img src="img/home.png" width="200"></a>
                     <a href="recetasColombianas.html"><img src="img/colombia.png" width="200"></a>
                     <a href="recetasArgentinas.html"><img src="img/argentina.png" width="200"></a>
                     <a href="contacto.html"><img src="img/contacto.png" width="200"></a>
-                    <br>
-                    <br>
-                    <hr>  
-                </nav> 
+                </div>>
         </header>
         <section>
             <img src="img/carrotcake.jpg" alt="carrot cake" height="200 px">
-            <h1>El Carrot Cake de Agus</h1>
+            <h1 class="h1Carrot">El Carrot Cake de Agus</h1>
             <p>La hago en budinera y es lo más de lo más. La comen chicos que odian la zanahoria y grandes que no entienden que hace un vegetal ahí, como si fuese el manjar más manjar en la faz de la tierra. </p>
         </section>
         <section>
-            <h2>Ingredientes</h2>
+            <h2 class="receta">Ingredientes</h2>
                 <ul type="disc">
                     <li>2 huevos</li>
                     <li>3/4 taza de azucar</li>
@@ -43,7 +40,7 @@
                  </ul>
         </section>
         <section>
-            <h2>Instrucciones</h2>
+            <h2 class="receta">Instrucciones</h2>
             <ol type="1">
                 <li>Va una hora con el horno bien suavecito (160°)</li>
                 <li>Se puede comer o guardar en la heladera, pero seguro que si son muchos no dura nada.</li>
@@ -60,6 +57,6 @@
         <br>
         <hr>
     <footer>
-        <p> Kill the Hambre 2021, Todos los derechos reservados</p>
+        <p class= "footer"> Kill the Hambre 2021, Todos los derechos reservados</p>
     </footer>
 </html>
