[ADD]cambios carrot cake

--- a/carrotCake.html
+++ b/carrotCake.html
@@ -4,22 +4,24 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../KillTheHambre/assets/styles.css">
+        <link rel="stylesheet" href="assets/styles.css">
         <title>Carrot Cake de Agus</title>
     </head>
     <body>
         <header>
             <nav>
-                <<a href="index.html"><img src="img/loguito.png" alt="logo kill the hambre" width="300"></a>
-                <div  class="naveg">
-                    <a href="index.html"><img src="img/home.png" width="200"></a>
-                    <a href="recetasColombianas.html"><img src="img/colombia.png" width="200"></a>
-                    <a href="recetasArgentinas.html"><img src="img/argentina.png" width="200"></a>
-                    <a href="contacto.html"><img src="img/contacto.png" width="200"></a>
-                </div>>
+                <a href="index.html"><img src="img/loguito.png" alt="logo kill the hambre" width="300"></a>
+                <a href="index.html"><img src="img/home.png" alt="link pestaña sobre nosotros" width="200"></a>
+                <a href="recetasColombianas.html"><img src="img/colombia.png" alt="link recetas colombinas" width="200"></a>
+                <a href="recetasArgentinas.html"><img src="img/argentina.png" alt="link recetas argentinas" width="200"></a>
+                <a href="contacto.html"><img src="img/contacto.png" alt="link pestaña contacto" width="200"></a>
+                <hr>  
+            </nav> 
         </header>
-        <section>
-            <img src="img/carrotcake.jpg" alt="carrot cake" height="200 px">
+        <section class="centrado">
+            <img src="img/carrotcake.jpg" alt="carrot cake">
+        </section> 
+        <section>  
             <h1 class="h1Carrot">El Carrot Cake de Agus</h1>
             <p>La hago en budinera y es lo más de lo más. La comen chicos que odian la zanahoria y grandes que no entienden que hace un vegetal ahí, como si fuese el manjar más manjar en la faz de la tierra. </p>
         </section>
@@ -45,9 +47,11 @@
                 <li>Va una hora con el horno bien suavecito (160°)</li>
                 <li>Se puede comer o guardar en la heladera, pero seguro que si son muchos no dura nada.</li>
                 <li>Si la hacen, quierermos fotos, como Uma que nos envió la suya.</li>
-                <br>
-                <img src="img/UMA&THECARROT.jpg" alt= "Uma Thruman comiendo carrot cake" width="250" >
+                <br>        
             </ol>
+        </section>
+        <section class="centrado">
+            <img src="img/UMA&THECARROT.jpg" alt= "Uma Thruman comiendo carrot cake" width="250" >
         </section>
     
 
