--- a/lemonPie.html
+++ b/lemonPie.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../KillTheHambre/assets/styles.css">
+    <link rel="stylesheet" href="assets/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
     <title>Receta del Lemmon Pie</title>
 </head>
 <body>
@@ -14,14 +14,15 @@
         <nav>
             <a href="index.html"><img src="img/loguito.png" alt="logo kill the hambre" width="300"></a>
             
-            
-            <a href="index.html"><img src="img/home.png" alt="link pestaña sobre nosotros" width="200"></a>
-            <a href="recetasColombianas.html"><img src="img/colombia.png" alt="link recetas colombinas" width="200"></a>
-            <a href="recetasArgentinas.html"><img src="img/argentina.png" alt="link recetas argentinas" width="200"></a>
-            <a href="contacto.html"><img src="img/contacto.png" alt="link pestaña contacto" width="200"></a>
+            <div class="naveg">
+                <a href="index.html"><img src="img/home.png" alt="link pestaña sobre nosotros" width="200"></a>
+                <a href="recetasColombianas.html"><img src="img/colombia.png" alt="link recetas colombinas" width="200"></a>
+                <a href="recetasArgentinas.html"><img src="img/argentina.png" alt="link recetas argentinas" width="200"></a>
+                <a href="contacto.html"><img src="img/contacto.png" alt="link pestaña contacto" width="200"></a>
+            </div>
             <hr>  
         </nav> 
-    </header>
+    </header> 
     <section class="posicionImagenes">
         <img src="img/lemonPie.jpg" alt="Lemmon pie" height="200 px">
     </section>
