--- a/muffins.html
+++ b/muffins.html
@@ -4,25 +4,23 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../KillTheHambre/assets/styles.css">
+        <link rel="stylesheet" href="assets/styles.css">
         <title>Muffins de manzana y avena de Lu</title>
     </head>
     <body>
         <header>
-                <nav>
-                    <a href="index.html"><img src="img/loguito.png" width="300"></a>
-                    <img src="img/espacio.png">
-                    <div  class="naveg">
-                        <a href="index.html"><img src="img/home.png" width="200"></a>
-                        <a href="recetasColombianas.html"><img src="img/colombia.png" width="200"></a>
-                        <a href="recetasArgentinas.html"><img src="img/argentina.png" width="200"></a>
-                        <a href="contacto.html"><img src="img/contacto.png" width="200"></a>
-                    </div>
-                    <br>
-                    <br>
-                    <hr>  
-                </nav> 
-        </header>
+            <nav>
+                <a href="index.html"><img src="img/loguito.png" alt="logo kill the hambre" width="300"></a>
+                
+                <div class="naveg">
+                    <a href="index.html"><img src="img/home.png" alt="link pestaña sobre nosotros" width="200"></a>
+                    <a href="recetasColombianas.html"><img src="img/colombia.png" alt="link recetas colombinas" width="200"></a>
+                    <a href="recetasArgentinas.html"><img src="img/argentina.png" alt="link recetas argentinas" width="200"></a>
+                    <a href="contacto.html"><img src="img/contacto.png" alt="link pestaña contacto" width="200"></a>
+                </div>
+                <hr>  
+            </nav> 
+        </header> 
         <section>
             <img src="img/muffinManz.jpg" alt="muffins de manzana y avena" height="200 px">
             <h1 class="h1Muf">Muffins de avena y manzana by Lu</h1>
